--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,9 @@
 
   <script src="app/app.js"></script>
   <script src="app/home/home.js"></script>
+  <script src="app/home/photo/home-photo.js"></script>
   
+  <script src="app/resources/camera.js"></script>
   <script src="app/resources/layout.js"></script>
 
 </head>
