Using an angular photo capture directive.

--- a/public/app/home/photo/accept.html
+++ b/public/app/home/photo/accept.html
@@ -1,6 +1,8 @@
 <br /><br /><br /><br />
 
 <div>
+	<canvas id="snapshot"></canvas>
+	<img src="{{photo.url}}" />
     <br /><br />
     Show the photo and capture patient details/permissions.
 </div>
