--- a/public/app/home/index.html
+++ b/public/app/home/index.html
@@ -4,10 +4,10 @@
         	<div class="home_content">
                 <i class="icon ion-camera"></i><p onclick="startCamera()">Tap here to take photo.</p>
                 <p>
-                    <video id="video" width="320" height="240" autoplay></video>
-                    <button id="snap">Snap Photo</button>
-                    <canvas id="canvas" width="320" height="240"></canvas>
-                    <button id="accept">Accept</button>
+                    <button class="btn btn-large btn-primary" ng-click="makeSnapshot()">Take Photo</button>
+                    <button id="accept" ng-click="goToAccept()">Accept</button>                    
+                    <webcam on-streaming="onSuccess(video)"></webcam>
+                    <canvas id="snapshot"></canvas>
                 </p>
 
             </div>
@@ -20,7 +20,7 @@
             <ion-list>
             <ul>
             	<li><a href="#">Home</a></li>
-            	<li><a ui-sref="photo"><i class="icon ion-edit small_radius"></i> Take Photo</a></li>
+            	<li><a ui-sref="home"><i class="icon ion-edit small_radius"></i> Take Photo</a></li>
             	<li><a href="#"><i class="icon ion-ios7-copy small_radius"></i> Library</a></li>
             	<li><a href="#"><i class="icon ion-document-text small_radius"></i> User Guide</a></li>
             </ul>
