--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,15 @@
   -->
 
   <script src="common/js/ionic.bundle.js"></script>
-  
+  <script src="common/js/webcam.min.js"></script>
 
   <script src="app/app.js"></script>
   <script src="app/home/home.js"></script>
   <script src="app/home/photo/home-photo.js"></script>
   
-  <script src="app/resources/camera.js"></script>
-  <script src="app/resources/layout.js"></script>
 
+  <script src="app/resources/layout.js"></script>
+  <script src="app/resources/photos.js"></script>
 </head>
 
 <body ng-controller="IndexCtrl">
