--- a/public/app/home/photo/accept.html
+++ b/public/app/home/photo/accept.html
@@ -5,7 +5,9 @@
 
     <br /><br />
     Email: <input type="text" ng-model="user.email" />
-
+    <br /><br />
+    User Name: <input type="text" ng-model="user.username" />
+    <br />
     <ul class="list">
     	<li class="item item-checkbox">
            <label class="checkbox">
@@ -31,6 +33,6 @@
            </label>
            Patient and Family Education
         </li>
-
     </ul>
+    <button id="allow">Allow</button>
 </div>
