Fixing image storage.

--- a/public/app/home/photo/accept.html
+++ b/public/app/home/photo/accept.html
@@ -1,8 +1,9 @@
 <br /><br /><br /><br />
 
-<div>
-	<canvas id="snapshot"></canvas>
-
+<div style="float: left; width: 320px">
+	<canvas id="snapshot" width="320px" height="240px"></canvas>
+</div>
+<div style="float:left">
     <br /><br />
     Email: <input type="text" ng-model="user.email" />
     <br /><br />
