--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
   <script src="app/app.js"></script>
   <script src="app/home/home.js"></script>
   <script src="app/home/photo/home-photo.js"></script>
+  <script src="app/home/library/home-library.js"></script>
   
 
   <script src="app/resources/layout.js"></script>
