bunch of changes for photo.

--- a/public/app/home/photo/accept.html
+++ b/public/app/home/photo/accept.html
@@ -35,5 +35,5 @@
            Patient and Family Education
         </li>
     </ul>
-    <button id="allow">Allow</button>
+    <button id="allow" ng-click="savePhoto()">Allow</button>
 </div>
