Infinite scroll working.

--- a/public/app/home/index.html
+++ b/public/app/home/index.html
@@ -21,7 +21,7 @@
             <ul>
             	<li><a href="#">Home</a></li>
             	<li><a ui-sref="home"><i class="icon ion-edit small_radius"></i> Take Photo</a></li>
-            	<li><a href="#"><i class="icon ion-ios7-copy small_radius"></i> Library</a></li>
+            	<li><a ui-sref="home.library"><i class="icon ion-ios7-copy small_radius"></i> Library</a></li>
             	<li><a href="#"><i class="icon ion-document-text small_radius"></i> User Guide</a></li>
             </ul>
             </ion-list>            
