--- a/public/app/home/index.html
+++ b/public/app/home/index.html
@@ -1,15 +1,14 @@
 <ion-side-menus>
-    <ion-side-menu-content class="">
+    <ion-side-menu-content class="" ng-controller="HomeCtrl">
         <ion-nav-view name="mainContent">
         	<div class="home_content">
-                <i class="icon ion-camera"></i><p onclick="startCamera()">Tap here to take photo.</p>
                 <p>
-                    <button class="btn btn-large btn-primary" ng-click="makeSnapshot()">Take Photo</button>
-                    <button id="accept" ng-click="goToAccept()">Accept</button>                    
+                    <br />
+                    <button class="button button-positive" ng-click="makeSnapshot()">Take Photo</button>
+                    <button class="button button-positive" id="accept" ng-click="goToAccept()">Accept</button>                
                     <webcam on-streaming="onSuccess(video)"></webcam>
                     <canvas id="snapshot"></canvas>
                 </p>
-
             </div>
 
         </ion-nav-view>
@@ -19,8 +18,8 @@
         <ion-content delegate-handle="" has-bouncing="true" class="has-header has-subheader home_menu">
             <ion-list>
             <ul>
-            	<li><a href="#">Home</a></li>
-            	<li><a ui-sref="home"><i class="icon ion-edit small_radius"></i> Take Photo</a></li>
+                <li>Menu</li>
+            	<li><a ui-sref="home"><i class="icon ion-camera small_radius"></i> Take Photo</a></li>
             	<li><a ui-sref="home.library"><i class="icon ion-ios7-copy small_radius"></i> Library</a></li>
             	<li><a href="#"><i class="icon ion-document-text small_radius"></i> User Guide</a></li>
             </ul>
