--- a/public/app/home/index.html
+++ b/public/app/home/index.html
@@ -2,13 +2,20 @@
     <ion-side-menu-content class="" ng-controller="HomeCtrl">
         <ion-nav-view name="mainContent">
         	<div class="home_content">
-                <p>
-                    <br />
-                    <button class="button button-positive" ng-click="makeSnapshot()">Take Photo</button>
-                    <button class="button button-positive" id="accept" ng-click="goToAccept()">Accept</button>                
+                <div>
+                    <button class="button button-positive button-block" ng-click="makeSnapshot()">Take Photo</button>
+                </div>
+                <div style="width: 100%; height: 260px;">
+                    <div style="width: 50%; float:left;">
                     <webcam on-streaming="onSuccess(video)"></webcam>
+                    </div>
+                    <div style="width: 340px; float:right;">
                     <canvas id="snapshot"></canvas>
-                </p>
+                    </div>
+                </div>
+                <div>
+                    <button class="button button-positive button-block" id="accept" ng-click="goToAccept()">Accept</button>
+                </div>
             </div>
 
         </ion-nav-view>
