Updating some text.

--- a/public/app/home/index.html
+++ b/public/app/home/index.html
@@ -17,7 +17,6 @@
                     <button class="button button-positive button-block" id="accept" ng-click="goToAccept()">Accept</button>
                 </div>
             </div>
-
         </ion-nav-view>
     </ion-side-menu-content>
 
@@ -28,7 +27,7 @@
                 <li>Menu</li>
             	<li><a ui-sref="home"><i class="icon ion-camera small_radius"></i> Take Photo</a></li>
             	<li><a ui-sref="home.library"><i class="icon ion-ios7-copy small_radius"></i> Library</a></li>
-            	<li><a href="#"><i class="icon ion-document-text small_radius"></i> User Guide</a></li>
+            	<!--<li><a href="#"><i class="icon ion-document-text small_radius"></i> User Guide</a></li>-->
             </ul>
             </ion-list>            
         </ion-content>
