--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 <div ng-cloak class="bar relate_navbar">
     <button class="button button-clear icon ion-navicon-round" ng-click="showMenu()"></button>
     <h1 class="title" ng-bind="layout.getHeaderTitle()"></h1>
-    <button class="button button-clear icon ion-home" ng-click="showModal()"></button>
+    <!--<button class="button button-clear icon ion-home" ng-click="showModal()"></button>-->
 </div>
 
 <ion-nav-view scroll="true"></ion-nav-view>
