--- a/public/app/home/photo/accept.html
+++ b/public/app/home/photo/accept.html
@@ -20,7 +20,7 @@
            <label class="checkbox">
              <input type="checkbox" checked="permission.two" style="padding: 0px">
            </label>
-           Health Professional Education
+           Healthcare Professional Education
         </li>
       <li class="item item-checkbox">
            <label class="checkbox">
