--- a/public/app/home/photo/takePhoto.html
+++ b/public/app/home/photo/takePhoto.html
@@ -1,10 +1,16 @@
 <div class="home_content">
-    <p>
-        <br />
-        <button class="button button-positive" ng-click="makeSnapshot()">Take Photo</button>
-        <button class="button button-positive" id="accept" ng-click="goToAccept()">Accept</button>                
-        <webcam on-streaming="onSuccess(video)"></webcam>
-        <canvas id="snapshot"></canvas>
-    </p>
-
-</div>
+                <div>
+                    <button class="button button-positive button-block" ng-click="makeSnapshot()">Take Photo</button>
+                </div>
+                <div style="width: 100%; height: 260px;">
+                    <div style="width: 50%; float:left;">
+                    <webcam on-streaming="onSuccess(video)"></webcam>
+                    </div>
+                    <div style="width: 340px; float:right;">
+                    <canvas id="snapshot"></canvas>
+                    </div>
+                </div>
+                <div>
+                    <button class="button button-positive button-block" id="accept" ng-click="goToAccept()">Accept</button>
+                </div>
+            </div>
