Fixed up permissions and the photo detail page.

--- a/public/app/home/photo/accept.html
+++ b/public/app/home/photo/accept.html
@@ -12,25 +12,25 @@
     <ul class="list">
       <li class="item item-checkbox">
            <label class="checkbox">
-             <input type="checkbox" checked="permission.one" style="padding: 0px">
+             <input type="checkbox" ng-model="permission.one" style="padding: 0px">
            </label>
            Direct Clinical Care
         </li>
       <li class="item item-checkbox">
            <label class="checkbox">
-             <input type="checkbox" checked="permission.two" style="padding: 0px">
+             <input type="checkbox" ng-model="permission.two" style="padding: 0px">
            </label>
            Healthcare Professional Education
         </li>
       <li class="item item-checkbox">
            <label class="checkbox">
-             <input type="checkbox" checked="permission.three" style="padding: 0px">
+             <input type="checkbox" ng-model="permission.three" style="padding: 0px">
            </label>
            Medical Journal Publication
         </li>
       <li class="item item-checkbox">
            <label class="checkbox">
-             <input type="checkbox" checked="permission.four" style="padding: 0px">
+             <input type="checkbox" ng-model="permission.four" style="padding: 0px">
            </label>
            Patient and Family Education
         </li>
