--- a/public/app/home/photo/confirmedmodal.html
+++ b/public/app/home/photo/confirmedmodal.html
@@ -4,4 +4,5 @@
   </div>
   <br /><br />
   <h3>Your photo has been saved for use and a notification has been sent to your email address.</h3>
+  <button class="button button-positive button-block" id="download" ng-click="closeModal()">Close</button>
 <div>
