Adding hackathon permission.

--- a/public/app/home/photo/accept.html
+++ b/public/app/home/photo/accept.html
@@ -26,13 +26,13 @@
            <label class="checkbox">
              <input type="checkbox" ng-model="permission.three" style="padding: 0px">
            </label>
-           Medical Journal Publication
+           Patient and Family Education
         </li>
       <li class="item item-checkbox">
            <label class="checkbox">
              <input type="checkbox" ng-model="permission.four" style="padding: 0px">
            </label>
-           Patient and Family Education
+           SickKids Hackathon 2014
         </li>
     </ul>
     <button class="button button-positive button-block" id="allow" ng-click="savePhoto()">Allow</button>
