--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
 
   <script src="app/resources/layout.js"></script>
   <script src="app/resources/photos.js"></script>
+  <script src="app/resources/usages.js"></script>
 </head>
 
 <body ng-controller="IndexCtrl">
