--- a/public/app/home/photo/confirmedmodal.html
+++ b/public/app/home/photo/confirmedmodal.html
@@ -1,8 +1,10 @@
-<div class="modal menu_modal2">
+<div class="modal menu_modal2" style="width:60%;margin-top:70px;padding-left:10px; padding-right:10px; height:220px">
   <div class="bar bar-header bar-balanced">
     <h1 class="title">Thank You!</h1>
   </div>
-  <br /><br />
-  <h3>Your photo has been saved for use and a notification has been sent to your email address.</h3>
+  <br /><br /><br />
+  <h4>Your photo has been saved.</h4>
+  <h4>You will receive an email notification when it is used.</h4>
+  <br />
   <button class="button button-positive button-block" id="download" ng-click="closeModal()">Close</button>
 <div>
